# rust-practice

./: Cargo.toml
Variables_And_Mutability/: Cargo.toml
Variables_And_Mutability/src/: main.rs
concise_flow_with_if_let/: Cargo.toml
concise_flow_with_if_let/src/: main.rs
control_flow/src/: main.rs
data_types/src/: main.rs
defining_an_enum/src/: main.rs
defining_and_instantiating_structs/src/: main.rs
defining_modules/src/: main.rs
example_program_using_structs/src/: main.rs
functions/src/: main.rs
generic_data_types/src/: generic_type_enums.rs  generic_type_functions.rs  generic_type_methods.rs  generic_type_structs.rs  main.rs
hashmaps/src/: main.rs
hello_module_tree_example/: Cargo.toml
hello_module_tree_example/src/: main.rs
hello_module_tree_example/src/hello/: friend.rs  mod.rs
lifetimes/src/: main.rs
making_structs_and_enums_public/: Cargo.toml
making_structs_and_enums_public/src/: house.rs  main.rs
making_structs_and_enums_public/src/house/: garden.rs
method_syntax/src/: main.rs
module_code_location_experiment/: Cargo.toml
module_code_location_experiment/src/: main.rs
panic_backtrace/src/: main.rs
pub_use_example/: Cargo.toml
pub_use_example/src/: elements.rs  main.rs
pub_use_example/src/elements/: fire.rs
references_and_borrowing/src/: main.rs
restaurant/src/: front_of_house.rs  lib.rs
restaurant/src/front_of_house/: serving.rs
testing_practice/adder/src/: lib.rs
testing_practice/adder/tests/: integration_test.rs
the_match_control_flow_construct/src/: main.rs
the_result_type/: Cargo.toml
the_result_type/src/: conversion.rs  expect.rs  file_open.rs  file_open_inner_match.rs  main.rs  unwrap.rs
the_result_type/src/file_open/: propagate_error.rs
the_slice_type/src/: main.rs
the_string_type/src/: main.rs
traits/aggregator/src/: lib.rs  main.rs
traits/default_implementations/src/: call_other_method.rs  default_impl.rs  lib.rs
understanding_ownership/src/: main.rs
unwind_vs_abort/: Cargo.toml
unwind_vs_abort/src/: main.rs
use_keyword/src/: main.rs
variables_and_shadowing/: Cargo.toml
variables_and_shadowing/src/: main.rs
vectors/src/: main.rs
(+10 files in other folders)
