[workspace]
members = [
    "variables_and_mutability",
    "variables_and_shadowing",
    "data_types",
    "functions",
    "control_flow",
    "understanding_ownership",
    "references_and_borrowing",
    "the_slice_type",
    "defining_and_instantiating_structs",
    "example_program_using_structs",
    "method_syntax"
    # Add additional projects here
]