[workspace]
members = [
    "variables_and_mutability",
    "variables_and_shadowing",
    "data_types",
    "functions",
    "control_flow",
    "understanding_ownership",
    "references_and_borrowing",
    "the_slice_type",
    "defining_and_instantiating_structs",
    "example_program_using_structs",
    "method_syntax",
    "defining_an_enum",
    "the_match_control_flow_construct",
    "concise_flow_with_if_let",
    "defining_modules",
    "restaurant",
    "hello_module_tree_example",
    "making_structs_and_enums_public",
    "use_keyword"
    # Add additional projects here
]