[package]
name = "unwind_vs_abort"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


# Have program abort instead of 
# unwind on panic when running in
# release mode
[profile.release]
panic = 'abort'
